# p123api-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
p123api/: __init__.py  client.py  types.py
